--- a/app/src/main/res/layout/activity_change_products_of_producer.xml
+++ b/app/src/main/res/layout/activity_change_products_of_producer.xml
@@ -16,6 +16,35 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
+
+
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <!-- Button Add Products to Producer -->
+        <Button android:id="@+id/btnDone"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btnDone"
+            android:layout_marginTop="10dp"
+            />
+
+        <!-- Button Add Products to Producer -->
+        <!--Button android:id="@+id/btnSaveList"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btnSave"
+            android:layout_weight="1"/-->
+
+        <!-- Button Cancel  -->
+        <!--Button android:id="@+id/btnCancel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btnCancel"
+            android:layout_weight="1"/-->
+    </LinearLayout>
+
     <!--Textview informazione-->
     <TextView
         android:layout_width="wrap_content"
@@ -24,33 +53,16 @@
         android:id="@+id/txtInfoDelete"
         android:text="@string/txtInfoDelete"
         android:textAlignment="gravity"
+        android:layout_marginTop="10dp"
         />
 
     <!-- Button Delete Products to Producer -->
-    <Button android:id="@+id/btnDeleteFinally"
+    <!--Button android:id="@+id/btnDeleteFinally"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/btnDeleteFinally"
-         />
+        android:layout_marginTop="10dp"
+        /-->
 
 
-
-    <LinearLayout android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <!-- Button Add Products to Producer -->
-        <Button android:id="@+id/btnSaveList"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/btnSave"
-            android:layout_weight="1"/>
-
-        <!-- Button Cancel  -->
-        <Button android:id="@+id/btnCancel"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/btnCancel"
-            android:layout_weight="1"/>
-    </LinearLayout>
 </LinearLayout>
