--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,5 +32,12 @@
         android:text="produttori"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="20dp"/>
+
+    <Button android:id="@+id/buttonOrder"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="ordini"
+       android:gravity="center_vertical|center_horizontal"
+       android:layout_marginTop="20dp"/>
     </LinearLayout>
 </LinearLayout>
